--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "daisyui": "^5.5.0",
     "next": "16.0.2",
     "react": "19.2.0",
